# TexasStateUniversity-HiPE-Thesis

./: .env  .gitignore  .gitmodules  README.md  compose-amd.yml  docker-compose.yml  justfile  manageEnv.sh  unzip_files.sh
assets/maps/: shapes.sdf  world-test.sdf
assets/models/: download_collection.py
docker/: ros-jazzy-gazebo.Dockerfile
docs/: LOG.md  NOTES.md  VERSIONS.md  X11.md
rl_agent/: breadcrumbs.csv  client.py  client_minimal.py  cql_finetune.py  cql_pretrain.py  dqn_online.py  extracted_tiles.csv  flake.nix  gym_env.py  infer.py  ollama_rl.py  pyproject.toml  replay_grid.py  server.py  teleop.py  teleop_gym.py  test.py  test_gym_env.py  train.py
rl_agent/firebot_agent/: extract_tiles.py  gym_env.py  heatmap_wrapper.py  log_master.py  offline_dataset_recorder.py  reward_tracker_wrapper.py  rl_zmq_client.py  training_utils.py  utils.py
rl_agent/scripts/: client_minimal.py  test_latency.py
ros2_ws/src/firebot-rl/: ATTRIBUTIONS  package.xml  setup.cfg  setup.py
ros2_ws/src/firebot-rl/assets/: world-test.sdf
ros2_ws/src/firebot-rl/config/: bridge_config.yaml  cartographer.lua  firebot.rviz  (+1 more)
ros2_ws/src/firebot_rl/: package.xml  setup.cfg  setup.py
ros2_ws/src/firebot_rl/assets/: world-test.sdf
ros2_ws/src/firebot_rl/assets/marble_hd2_sensor_config_4/11/: metadata.pbtxt  model.sdf
ros2_ws/src/firebot_rl/config/: bridge_config.yaml  cartographer.lua
ros2_ws/src/firebot_rl/firebot_rl/: contact_monitor.py  local_grid_plotter.py  local_grid_window.py  zmq_bridge.py
ros2_ws/src/firebot_rl/launch/: README.md  bridge.launch.xml  run_gz.launch.py
(+2 files in other folders)
