[project]
name = "rl-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "msgpack>=1.1.2",
    "msgpack-numpy>=0.4.8",
    "pyzmq>=27.1.0",
    "stable-baselines3>=2.7.1",
    "torch==2.5.1",
    "tensorboard>=2.18.0",
    "rich>=13.9.4",
    "tqdm>=4.67.1",
    "pygame>=2.6.1",
]
