<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>firebot_rl</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>Apache-2.0</license>

  <!-- Runtime deps -->
  <exec_depend>python3-zmq</exec_depend>
  <exec_depend>python3-msgpack</exec_depend>
  <exec_depend>python3-msgpack-numpy</exec_depend>
  <exec_depend>ros_gz</exec_depend>
  <exec_depend>ros_gz_interfaces</exec_depend>
  <exec_depend>cartographer</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>web_video_server</exec_depend>

  <!-- Tests -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
